fixing alignment of card text

--- a/style.css
+++ b/style.css
@@ -104,12 +104,6 @@ a {
   background-position: center top;
 }
 
-iframe {
-  background-size: cover;
-  border: none;
-  height: 170px;
-}
-
 .card article {
   padding: 10px;
   flex: 1;
